 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

IMPROVEMENTS

PIG-3178: Print a stacktrace when ExecutableManager hits an OOM (knoguchi via rohini)

PIG-3160: GFCross uses unnecessary loop (sandyr via cheolsoo)

PIG-3138: Decouple PigServer.executeBatch() from compilation of batch (pkommireddi via cheolsoo)

PIG-2878: Pig current releases lack a UDF equalIgnoreCase.This function returns a Boolean value indicating whether string left is equal to string right. This
check is case insensitive. (shami via gates)

PIG-2994: Grunt shortcuts (prasanth_j via cheolsoo)

PIG-3140: Document PigProgressNotificationListener configs (billgraham)

PIG-3139: Document reducer estimation (billgraham)

PIG-2764: Add a biginteger and bigdecimal type to pig (jcoveney)

PIG-3073: POUserFunc creating log spam for large scripts (jcoveney)

PIG-3082: outputSchema of a UDF allows two usages when describing a Tuple schema (jcoveney)

PIG-3124:  Push FLATTENs After FILTERs If Possible (nwhite via daijy)

PIG-3086: Allow A Prefix To Be Added To URIs In PigUnit Tests (nwhite via gates)

PIG-3091: Make schema, header and stats file configurable in JsonMetadata (pkommireddi via jcoveney)

PIG-3078: Make a UDF that, given a string, returns just the columns prefixed by that string (jcoveney)

PIG-3090: Introduce a syntax to be able to easily refer to the previously defined relation (jcoveney)

PIG-3057: Make PigStorage.readField() protected (pablomar and billgraham via billgraham)

PIG-2788: improved string interpolation of variables (jcoveney)

PIG-2362: Rework Ant build.xml to use macrodef instead of antcall (azaroth via cheolsoo)

PIG-2857: Add a -tagPath option to PigStorage (prkommireddi via cheolsoo)
