@@ -24,6 +24,8 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-3108: HBaseStorage returns empty maps when mixing wildcard with other columns (christoph.bauer via billgraham)
+
 PIG-3178: Print a stacktrace when ExecutableManager hits an OOM (knoguchi via rohini)
 
 PIG-3160: GFCross uses unnecessary loop (sandyr via cheolsoo)
